# gme_price

./: .gitignore  README.md  pyproject.toml
data/: Anno 2004.xlsx
gme_price/: __init__.py  algorithm.py  dataset.py
