[tool.poetry]
name = "gme_price"
version = "0.1.0"
description = ""
authors = ["Francesco Franchina <cescus92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
numpy = "^1.24.2"
statsmodels = "^0.13.5"
scikit-learn = "^1.2.1"
openpyxl = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
